connected frontend and backend

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://benaronow227:Fearow8273!@lt-cluster.5az0q.mongodb.net/?retryWrites=true&w=majority&appName=LT-Cluster
+MONGODB_URI = mongodb+srv://benaronow227:Fearow8273!@lt-cluster.5az0q.mongodb.net/fitness-log?retryWrites=true&w=majority&appName=LT-Cluster
