--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.0",
+    "axios": "^1.7.9",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
