--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "ts-node server.ts",
     "build": "next build",
     "start": "next start"
   },
@@ -11,22 +11,30 @@
     "@mui/material": "^6.2.0",
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.7.9",
-    "next": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "dotenv": "^16.4.7",
+    "mongoose": "^8.9.1",
+    "next": "15.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-redux": "^9.1.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "20.2.5",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.13.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.18.1"
+  },
+  "resolutions": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2"
   }
 }
