--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "ts-node server.ts",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   },
@@ -11,15 +11,11 @@
     "@mui/material": "^6.2.0",
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
     "mongoose": "^8.9.1",
     "next": "15.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-redux": "^9.1.0",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "ts-node": "^10.9.2"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
