--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "4.0.0-beta.0",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@next/eslint-plugin-next": "^15.1.2",
     "@types/node": "20.2.5",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
@@ -34,5 +36,5 @@
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2"
   },
-  "type": "module" 
+  "type": "module"
 }
