--- a/app/manifest.json
+++ b/app/manifest.json
@@ -39,6 +39,7 @@
     }
   ],
   "start_url": "/",
+  "scope": "/",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone"
