--- a/app/manifest.json
+++ b/app/manifest.json
@@ -8,37 +8,37 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "icon/icon-48.png",
+      "src": "img/favicon-48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "icon/icon-96.png",
+      "src": "img/favicon-96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "icon/icon-144.png",
+      "src": "img/favicon-144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "icon/icon-196.png",
+      "src": "img/favicon-196.png",
       "sizes": "196x196",
       "type": "image/png"
     },
     {
-      "src": "icon/icon-384.png",
+      "src": "img/favicon-384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "icon/icon-android-192.png",
+      "src": "img/favicon-android-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon/icon-android-512.png",
+      "src": "img/favicon-android-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
