--- a/app/manifest.json
+++ b/app/manifest.json
@@ -8,37 +8,32 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "/img/favicon-48.png",
+      "src": "/images/icon3.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/img/favicon-96.png",
+      "src": "/images/icon4.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/img/favicon-144.png",
+      "src": "/images/icon5.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/img/favicon-196.png",
-      "sizes": "196x196",
-      "type": "image/png"
-    },
-    {
-      "src": "/img/favicon-384.png",
+      "src": "/images/icon6.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/img/favicon-android-192.png",
+      "src": "/images/icon7.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/img/favicon-android-512.png",
+      "src": "/images/icon8.png",
       "sizes": "512x512",
       "type": "image/png"
     }
