--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "tss-react": "^4.9.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
