--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
+    "@mui/x-date-pickers": "^7.23.3",
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "mongoose": "^8.9.1",
     "next": "15.1.0",
     "react": "19.0.0",
