--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@auth0/nextjs-auth0": "4.0.0-beta.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.2.0",
     "@mui/x-date-pickers": "^7.23.3",
     "@reduxjs/toolkit": "^2.2.0",
@@ -20,6 +21,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-redux": "^9.2.0",
+    "react-select": "^5.9.0",
     "tss-react": "^4.9.14"
   },
   "devDependencies": {
