--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "4.0.0-beta.0",
+    "@auth0/nextjs-auth0": "4.0.0-beta.13",
+    "@dnd-kit/core": "^6.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
-    "@mui/material": "^6.2.0",
+    "@mui/material": "^6.3.0",
+    "@mui/system": "^6.3.0",
     "@mui/x-date-pickers": "^7.23.3",
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "material-react-table": "^3.1.0",
     "mongoose": "^8.9.1",
-    "next": "15.1.0",
+    "next": "^15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-redux": "^9.2.0",
@@ -26,7 +29,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@next/eslint-plugin-next": "^15.1.2",
     "@types/node": "20.2.5",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
