--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.9.0",
     "tss-react": "^4.9.14"
