--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/system": "^6.3.0",
     "@mui/x-date-pickers": "^7.23.3",
     "axios": "^1.7.9",
+    "bootstrap": "5.3.8",
     "dayjs": "^1.11.13",
     "mongoose": "^8.9.1",
     "next": "^15.1.3",
     "react": "19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
