--- a/package.json
+++ b/package.json
@@ -1,48 +1,44 @@
 {
   "private": true,
+  
   "scripts": {
     "dev": "next --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^4.11.0",
-    "@dnd-kit/core": "^6.3.1",
+    "@auth0/nextjs-auth0": "^4.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.3.0",
-    "@mui/material": "^6.3.0",
-    "@mui/material-nextjs": "^7.3.3",
-    "@mui/system": "^6.3.0",
-    "@mui/x-date-pickers": "^7.23.3",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
+    "@mui/material-nextjs": "^7.3.7",
+    "@mui/system": "^7.3.7",
+    "@mui/x-date-pickers": "^8.24.0",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "bootstrap": "5.3.8",
     "dayjs": "^1.11.13",
-    "mongoose": "^8.9.1",
+    "mongoose": "^9.1.2",
     "next": "^16.1.1",
-    "react": "19.0.0",
+    "react": "^19.2.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "19.0.0",
-    "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0",
-    "react-select": "^5.9.0"
+    "react-dom": "^19.2.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "20.2.5",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "^19.2.1",
+    "@types/react-dom": "^19.2.1",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.13.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.18.1"
-  },
-  "resolutions": {
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2"
   },
   "type": "module"
 }
